lib/janet.h

/* Use type punning for GC objects */
typedef struct JanetGCObject JanetGCObject;
/* All of the primary Janet GCed types */
typedef struct JanetFunction JanetFunction;
typedef struct JanetBuffer JanetBuffer;
typedef struct JanetTable JanetTable;
typedef struct JanetFiber JanetFiber;
/* Other structs */
typedef struct JanetFuncDef JanetFuncDef;
typedef struct JanetFuncEnv JanetFuncEnv;
typedef struct JanetAbstractType JanetAbstractType;
typedef struct JanetReg JanetReg;
typedef struct JanetRegExt JanetRegExt;
typedef struct JanetMethod JanetMethod;
typedef struct JanetSourceMapping JanetSourceMapping;
typedef struct JanetSymbolMap JanetSymbolMap;
typedef struct JanetByteView JanetByteView;
/* Basic types for all Janet Values */
typedef enum JanetType {
  JANET_NUMBER,
  JANET_NIL,
  JANET_BOOLEAN,
  JANET_FIBER,
  JANET_STRING,
  JANET_SYMBOL,
  JANET_KEYWORD,
  JANET_ARRAY,
  JANET_TUPLE,
  JANET_TABLE,
  JANET_STRUCT,
  JANET_BUFFER,
  JANET_FUNCTION,
  JANET_CFUNCTION,
  JANET_ABSTRACT,
  JANET_POINTER
} JanetType;
typedef union Janet Janet;
union Janet {
  uint64_t u64;
  int64_t i64;
  double number;
  void *pointer;
};
typedef union Janet Janet;
union Janet {
  struct {
#ifdef JANET_BIG_ENDIAN
    uint32_t type;
    union {
      int32_t integer;
      void *pointer;
    } payload;
#else
    union {
      int32_t integer;
      void *pointer;
    } payload;
    uint32_t type;
#endif
  } tagged;
  double number;
  uint64_t u64;
};
typedef struct Janet Janet;
struct Janet {
  union {
    uint64_t u64;
    double number;
    int32_t integer;
    void *pointer;
    const void *cpointer;
  } as;
  JanetType type;
};
/* C functions */
typedef Janet (*JanetCFunction)(int32_t argc, Janet *argv);
/* String and other aliased pointer types */
typedef const uint8_t *JanetString;
typedef struct JanetStream JanetStream;
/* Wrapper around file descriptors and HANDLEs that can be polled. */
struct JanetStream {
  JanetHandle handle;
  uint32_t flags;
  uint32_t index;
  JanetFiber *read_fiber;
  JanetFiber *write_fiber;
  const void *methods; /* Methods for this stream */
};
typedef void (*JanetEVCallback)(JanetFiber *fiber, JanetAsyncEvent event);
typedef long JanetAtomicInt;
typedef int32_t JanetAtomicInt;
/* GC Object type pun. The lower 16 bits of flags are reserved for the garbage
 * collector, but the upper 16 can be used per type for custom flags. The
 * current collector is a linked list of blocks, which is naive but works. */
struct JanetGCObject {
  int32_t flags;
  union {
    JanetGCObject *next;
    volatile JanetAtomicInt refcount; /* For threaded abstract types */
  } data;
};
/* A lightweight green thread in janet. Does not correspond to
 * operating system threads. */
struct JanetFiber {
  JanetGCObject gc;   /* GC Object stuff */
  int32_t flags;      /* More flags */
  int32_t frame;      /* Index of the stack frame */
  int32_t stackstart; /* Beginning of next args */
  int32_t stacktop; /* Top of stack. Where values are pushed and popped from. */
  int32_t capacity; /* How big is the stack memory */
  int32_t maxstack; /* Arbitrary defined limit for stack overflow */
  JanetTable *env;  /* Dynamic bindings table (usually current environment). */
  Janet *data;      /* Dynamically resized stack memory */
  JanetFiber
      *child; /* Keep linked list of fibers for restarting pending fibers */
  Janet last_value; /* Last returned value from a fiber */
#ifdef JANET_EV
  /* These fields are only relevant for fibers that are used as "root fibers" -
   * that is, fibers that are scheduled on the event loop and behave much like
   * threads in a multi-tasking system. It would be possible to move these
   * fields to a new type, say "JanetTask", that as separate from fibers to save
   * a bit of space. */
  uint32_t sched_id; /* Increment everytime fiber is scheduled by event loop */
  JanetEVCallback ev_callback; /* Call this before starting scheduled fibers */
  JanetStream *ev_stream;      /* which stream we are waiting on */
  void *ev_state; /* Extra data for ev callback state. On windows, first element
                     must be OVERLAPPED. */
  void *supervisor_channel; /* Channel to push self to when complete */
#endif
};
/* A byte buffer type. Used as a mutable string or string builder. */
struct JanetBuffer {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  uint8_t *data;
};
/* A mutable associative data type. Backed by a hashtable. */
struct JanetTable {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  int32_t deleted;
  JanetKV *data;
  JanetTable *proto;
};
/* Source mapping structure for a bytecode instruction */
struct JanetSourceMapping {
  int32_t line;
  int32_t column;
};
/* Symbol to slot mapping & lifetime structure. */
struct JanetSymbolMap {
  uint32_t birth_pc;
  uint32_t death_pc;
  uint32_t slot_index;
  const uint8_t *symbol;
};
/* A function definition. Contains information needed to instantiate closures.
 */
struct JanetFuncDef {
  JanetGCObject gc;
  int32_t *environments; /* Which environments to capture from parent. */
  Janet *constants;
  JanetFuncDef **defs;
  uint32_t *bytecode;
  uint32_t *closure_bitset; /* Bit set indicating which slots can be referenced
                               by closures. */

  /* Various debug information */
  JanetSourceMapping *sourcemap;
  JanetString source;
  JanetString name;
  JanetSymbolMap *symbolmap;

  int32_t flags;
  int32_t slotcount; /* The amount of stack space required for the function */
  int32_t arity;     /* Not including varargs */
  int32_t min_arity; /* Including varargs */
  int32_t max_arity; /* Including varargs */
  int32_t constants_length;
  int32_t bytecode_length;
  int32_t environments_length;
  int32_t defs_length;
  int32_t symbolmap_length;
};
/* A function environment */
struct JanetFuncEnv {
  JanetGCObject gc;
  union {
    JanetFiber *fiber;
    Janet *values;
  } as;
  int32_t length; /* Size of environment */
  int32_t offset; /* Stack offset when values still on stack. If offset is <= 0,
      then environment is no longer on the stack. */
};
/* A function */
struct JanetFunction {
  JanetGCObject gc;
  JanetFuncDef *def;
  JanetFuncEnv *envs[];
};
typedef struct JanetParseState JanetParseState;
typedef struct JanetParser JanetParser;
enum JanetParserStatus {
  JANET_PARSE_ROOT,
  JANET_PARSE_ERROR,
  JANET_PARSE_PENDING,
  JANET_PARSE_DEAD
};
/* A janet parser */
struct JanetParser {
  Janet *args;
  const char *error;
  JanetParseState *states;
  uint8_t *buf;
  size_t argcount;
  size_t argcap;
  size_t statecount;
  size_t statecap;
  size_t bufcount;
  size_t bufcap;
  size_t line;
  size_t column;
  size_t pending;
  int lookback;
  int flag;
};
/* A context for marshaling and unmarshaling abstract types */
typedef struct {
  void *m_state;
  void *u_state;
  int flags;
  const uint8_t *data;
  const JanetAbstractType *at;
} JanetMarshalContext;
/* Defines an abstract type */
struct JanetAbstractType {
  const char *name;
  int (*gc)(void *data, size_t len);
  int (*gcmark)(void *data, size_t len);
  int (*get)(void *data, Janet key, Janet *out);
  void (*put)(void *data, Janet key, Janet value);
  void (*marshal)(void *p, JanetMarshalContext *ctx);
  void *(*unmarshal)(JanetMarshalContext *ctx);
  void (*tostring)(void *p, JanetBuffer *buffer);
  int (*compare)(void *lhs, void *rhs);
  int32_t (*hash)(void *p, size_t len);
  Janet (*next)(void *p, Janet key);
  Janet (*call)(void *p, int32_t argc, Janet *argv);
  size_t (*length)(void *p, size_t len);
  JanetByteView (*bytes)(void *p, size_t len);
};
struct JanetReg {
  const char *name;
  JanetCFunction cfun;
  const char *documentation;
};
struct JanetRegExt {
  const char *name;
  JanetCFunction cfun;
  const char *documentation;
  const char *source_file;
  int32_t source_line;
};
struct JanetMethod {
  const char *name;
  JanetCFunction cfun;
};
struct JanetByteView {
  const uint8_t *bytes;
  int32_t len;
};