janet_bindings/src/bindings.rs

#[repr(C)]
#[derive(Copy, Clone)]
pub union JanetFuncEnv__bindgen_ty_1 {
    pub fiber: *mut JanetFiber,
    pub values: *mut Janet,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetFuncEnv__bindgen_ty_1"]
        [::std::mem::size_of::<JanetFuncEnv__bindgen_ty_1>() - 8usize];
    ["Alignment of JanetFuncEnv__bindgen_ty_1"]
        [::std::mem::align_of::<JanetFuncEnv__bindgen_ty_1>() - 8usize];
    ["Offset of field: JanetFuncEnv__bindgen_ty_1::fiber"]
        [::std::mem::offset_of!(JanetFuncEnv__bindgen_ty_1, fiber) - 0usize];
    ["Offset of field: JanetFuncEnv__bindgen_ty_1::values"]
        [::std::mem::offset_of!(JanetFuncEnv__bindgen_ty_1, values) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetFuncEnv"][::std::mem::size_of::<JanetFuncEnv>() - 32usize];
    ["Alignment of JanetFuncEnv"][::std::mem::align_of::<JanetFuncEnv>() - 8usize];
    ["Offset of field: JanetFuncEnv::gc"][::std::mem::offset_of!(JanetFuncEnv, gc) - 0usize];
    ["Offset of field: JanetFuncEnv::as_"][::std::mem::offset_of!(JanetFuncEnv, as_) - 16usize];
    ["Offset of field: JanetFuncEnv::length"]
        [::std::mem::offset_of!(JanetFuncEnv, length) - 24usize];
    ["Offset of field: JanetFuncEnv::offset"]
        [::std::mem::offset_of!(JanetFuncEnv, offset) - 28usize];
};
#[repr(C)]
pub struct JanetFunction {
    pub gc: JanetGCObject,
    pub def: *mut JanetFuncDef,
    pub envs: __IncompleteArrayField<*mut JanetFuncEnv>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetFunction"][::std::mem::size_of::<JanetFunction>() - 24usize];
    ["Alignment of JanetFunction"][::std::mem::align_of::<JanetFunction>() - 8usize];
    ["Offset of field: JanetFunction::gc"][::std::mem::offset_of!(JanetFunction, gc) - 0usize];
    ["Offset of field: JanetFunction::def"][::std::mem::offset_of!(JanetFunction, def) - 16usize];
    ["Offset of field: JanetFunction::envs"][::std::mem::offset_of!(JanetFunction, envs) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetParseState {
    _unused: [u8; 0],
}
pub const JANET_PARSER_STATUS_JANET_PARSE_ROOT: JanetParserStatus = 0;
pub const JANET_PARSER_STATUS_JANET_PARSE_ERROR: JanetParserStatus = 1;
pub const JANET_PARSER_STATUS_JANET_PARSE_PENDING: JanetParserStatus = 2;
pub const JANET_PARSER_STATUS_JANET_PARSE_DEAD: JanetParserStatus = 3;
pub type JanetParserStatus = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetParser {
    pub args: *mut Janet,
    pub error: *const ::std::os::raw::c_char,
    pub states: *mut JanetParseState,
    pub buf: *mut u8,
    pub argcount: usize,
    pub argcap: usize,
    pub statecount: usize,
    pub statecap: usize,
    pub bufcount: usize,
    pub bufcap: usize,
    pub line: usize,
    pub column: usize,
    pub pending: usize,
    pub lookback: ::std::os::raw::c_int,
    pub flag: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetParser"][::std::mem::size_of::<JanetParser>() - 112usize];
    ["Alignment of JanetParser"][::std::mem::align_of::<JanetParser>() - 8usize];
    ["Offset of field: JanetParser::args"][::std::mem::offset_of!(JanetParser, args) - 0usize];
    ["Offset of field: JanetParser::error"][::std::mem::offset_of!(JanetParser, error) - 8usize];
    ["Offset of field: JanetParser::states"][::std::mem::offset_of!(JanetParser, states) - 16usize];
    ["Offset of field: JanetParser::buf"][::std::mem::offset_of!(JanetParser, buf) - 24usize];
    ["Offset of field: JanetParser::argcount"]
        [::std::mem::offset_of!(JanetParser, argcount) - 32usize];
    ["Offset of field: JanetParser::argcap"][::std::mem::offset_of!(JanetParser, argcap) - 40usize];
    ["Offset of field: JanetParser::statecount"]
        [::std::mem::offset_of!(JanetParser, statecount) - 48usize];
    ["Offset of field: JanetParser::statecap"]
        [::std::mem::offset_of!(JanetParser, statecap) - 56usize];
    ["Offset of field: JanetParser::bufcount"]
        [::std::mem::offset_of!(JanetParser, bufcount) - 64usize];
    ["Offset of field: JanetParser::bufcap"][::std::mem::offset_of!(JanetParser, bufcap) - 72usize];
    ["Offset of field: JanetParser::line"][::std::mem::offset_of!(JanetParser, line) - 80usize];
    ["Offset of field: JanetParser::column"][::std::mem::offset_of!(JanetParser, column) - 88usize];
    ["Offset of field: JanetParser::pending"]
        [::std::mem::offset_of!(JanetParser, pending) - 96usize];
    ["Offset of field: JanetParser::lookback"]
        [::std::mem::offset_of!(JanetParser, lookback) - 104usize];
    ["Offset of field: JanetParser::flag"][::std::mem::offset_of!(JanetParser, flag) - 108usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetMarshalContext {
    pub m_state: *mut ::std::os::raw::c_void,
    pub u_state: *mut ::std::os::raw::c_void,
    pub flags: ::std::os::raw::c_int,
    pub data: *const u8,
    pub at: *const JanetAbstractType,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetMarshalContext"][::std::mem::size_of::<JanetMarshalContext>() - 40usize];
    ["Alignment of JanetMarshalContext"][::std::mem::align_of::<JanetMarshalContext>() - 8usize];
    ["Offset of field: JanetMarshalContext::m_state"]
        [::std::mem::offset_of!(JanetMarshalContext, m_state) - 0usize];
    ["Offset of field: JanetMarshalContext::u_state"]
        [::std::mem::offset_of!(JanetMarshalContext, u_state) - 8usize];
    ["Offset of field: JanetMarshalContext::flags"]
        [::std::mem::offset_of!(JanetMarshalContext, flags) - 16usize];
    ["Offset of field: JanetMarshalContext::data"]
        [::std::mem::offset_of!(JanetMarshalContext, data) - 24usize];
    ["Offset of field: JanetMarshalContext::at"]
        [::std::mem::offset_of!(JanetMarshalContext, at) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetAbstractType {
    pub name: *const ::std::os::raw::c_char,
    pub gc: ::std::option::Option<
        unsafe extern "C" fn(
            data: *mut ::std::os::raw::c_void,
            len: usize,
        ) -> ::std::os::raw::c_int,
    >,
    pub gcmark: ::std::option::Option<
        unsafe extern "C" fn(
            data: *mut ::std::os::raw::c_void,
            len: usize,
        ) -> ::std::os::raw::c_int,
    >,
    pub get: ::std::option::Option<
        unsafe extern "C" fn(
            data: *mut ::std::os::raw::c_void,
            key: Janet,
            out: *mut Janet,
        ) -> ::std::os::raw::c_int,
    >,
    pub put: ::std::option::Option<
        unsafe extern "C" fn(data: *mut ::std::os::raw::c_void, key: Janet, value: Janet),
    >,
    pub marshal: ::std::option::Option<
        unsafe extern "C" fn(p: *mut ::std::os::raw::c_void, ctx: *mut JanetMarshalContext),
    >,
    pub unmarshal: ::std::option::Option<
        unsafe extern "C" fn(ctx: *mut JanetMarshalContext) -> *mut ::std::os::raw::c_void,
    >,
    pub tostring: ::std::option::Option<
        unsafe extern "C" fn(p: *mut ::std::os::raw::c_void, buffer: *mut JanetBuffer),
    >,
    pub compare: ::std::option::Option<
        unsafe extern "C" fn(
            lhs: *mut ::std::os::raw::c_void,
            rhs: *mut ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
    pub hash: ::std::option::Option<
        unsafe extern "C" fn(p: *mut ::std::os::raw::c_void, len: usize) -> i32,
    >,
    pub next: ::std::option::Option<
        unsafe extern "C" fn(p: *mut ::std::os::raw::c_void, key: Janet) -> Janet,
    >,
    pub call: ::std::option::Option<
        unsafe extern "C" fn(p: *mut ::std::os::raw::c_void, argc: i32, argv: *mut Janet) -> Janet,
    >,
    pub length: ::std::option::Option<
        unsafe extern "C" fn(p: *mut ::std::os::raw::c_void, len: usize) -> usize,
    >,
    pub bytes: ::std::option::Option<
        unsafe extern "C" fn(p: *mut ::std::os::raw::c_void, len: usize) -> JanetByteView,
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetAbstractType"][::std::mem::size_of::<JanetAbstractType>() - 112usize];
    ["Alignment of JanetAbstractType"][::std::mem::align_of::<JanetAbstractType>() - 8usize];
    ["Offset of field: JanetAbstractType::name"]
        [::std::mem::offset_of!(JanetAbstractType, name) - 0usize];
    ["Offset of field: JanetAbstractType::gc"]
        [::std::mem::offset_of!(JanetAbstractType, gc) - 8usize];
    ["Offset of field: JanetAbstractType::gcmark"]
        [::std::mem::offset_of!(JanetAbstractType, gcmark) - 16usize];
    ["Offset of field: JanetAbstractType::get"]
        [::std::mem::offset_of!(JanetAbstractType, get) - 24usize];
    ["Offset of field: JanetAbstractType::put"]
        [::std::mem::offset_of!(JanetAbstractType, put) - 32usize];
    ["Offset of field: JanetAbstractType::marshal"]
        [::std::mem::offset_of!(JanetAbstractType, marshal) - 40usize];
    ["Offset of field: JanetAbstractType::unmarshal"]
        [::std::mem::offset_of!(JanetAbstractType, unmarshal) - 48usize];
    ["Offset of field: JanetAbstractType::tostring"]
        [::std::mem::offset_of!(JanetAbstractType, tostring) - 56usize];
    ["Offset of field: JanetAbstractType::compare"]
        [::std::mem::offset_of!(JanetAbstractType, compare) - 64usize];
    ["Offset of field: JanetAbstractType::hash"]
        [::std::mem::offset_of!(JanetAbstractType, hash) - 72usize];
    ["Offset of field: JanetAbstractType::next"]
        [::std::mem::offset_of!(JanetAbstractType, next) - 80usize];
    ["Offset of field: JanetAbstractType::call"]
        [::std::mem::offset_of!(JanetAbstractType, call) - 88usize];
    ["Offset of field: JanetAbstractType::length"]
        [::std::mem::offset_of!(JanetAbstractType, length) - 96usize];
    ["Offset of field: JanetAbstractType::bytes"]
        [::std::mem::offset_of!(JanetAbstractType, bytes) - 104usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetReg {
    pub name: *const ::std::os::raw::c_char,
    pub cfun: JanetCFunction,
    pub documentation: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetReg"][::std::mem::size_of::<JanetReg>() - 24usize];
    ["Alignment of JanetReg"][::std::mem::align_of::<JanetReg>() - 8usize];
    ["Offset of field: JanetReg::name"][::std::mem::offset_of!(JanetReg, name) - 0usize];
    ["Offset of field: JanetReg::cfun"][::std::mem::offset_of!(JanetReg, cfun) - 8usize];
    ["Offset of field: JanetReg::documentation"]
        [::std::mem::offset_of!(JanetReg, documentation) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetRegExt {
    pub name: *const ::std::os::raw::c_char,
    pub cfun: JanetCFunction,
    pub documentation: *const ::std::os::raw::c_char,
    pub source_file: *const ::std::os::raw::c_char,
    pub source_line: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetRegExt"][::std::mem::size_of::<JanetRegExt>() - 40usize];
    ["Alignment of JanetRegExt"][::std::mem::align_of::<JanetRegExt>() - 8usize];
    ["Offset of field: JanetRegExt::name"][::std::mem::offset_of!(JanetRegExt, name) - 0usize];
    ["Offset of field: JanetRegExt::cfun"][::std::mem::offset_of!(JanetRegExt, cfun) - 8usize];
    ["Offset of field: JanetRegExt::documentation"]
        [::std::mem::offset_of!(JanetRegExt, documentation) - 16usize];
    ["Offset of field: JanetRegExt::source_file"]
        [::std::mem::offset_of!(JanetRegExt, source_file) - 24usize];
    ["Offset of field: JanetRegExt::source_line"]
        [::std::mem::offset_of!(JanetRegExt, source_line) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetMethod {
    pub name: *const ::std::os::raw::c_char,
    pub cfun: JanetCFunction,
}
